// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configuration level setting level to none prevents decoration from being displayed 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 zero width space (unicode U+200b) here",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`configuration level setting level to none prevents decoration from being displayed 2`] = `Array []`;

exports[`configuration level setting level to none prevents decoration from being displayed 3`] = `
Array [
  Array [
    "document1",
    Array [],
  ],
]
`;

exports[`configuration level setting level to none prevents decoration from being displayed 4`] = `
Array [
  Array [
    "document1",
    Array [],
  ],
  Array [
    "document2",
    Array [],
  ],
  Array [
    "document3",
    Array [],
  ],
]
`;

exports[`lifecycle event handling clears diagnostics on workspace.onDidCloseTextDocument 1`] = `undefined`;

exports[`lifecycle event handling processes new file on window.onDidChangeActiveTextEditor 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 zero width space (unicode U+200b) here",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`lifecycle event handling processes new file on window.onDidChangeActiveTextEditor 2`] = `
Array [
  Array [
    "document4",
    Array [
      Object {
        "message": "1 zero width space (unicode U+200b) here",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;

exports[`lifecycle event handling processes new file on workspace.onDidChangeTextDocument 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 zero width space (unicode U+200b) here",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`lifecycle event handling processes new file on workspace.onDidChangeTextDocument 2`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "1 zero width space (unicode U+200b) here",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;

exports[`lifecycle event handling processes visible text editors on workspace.onDidChangeConfiguration 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    Array [],
  ],
]
`;

exports[`lifecycle event handling processes visible text editors on workspace.onDidChangeConfiguration 2`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    Array [],
  ],
]
`;

exports[`lifecycle event handling processes visible text editors on workspace.onDidChangeConfiguration 3`] = `
Array [
  Array [
    "document2",
    Array [],
  ],
  Array [
    "document3",
    Array [],
  ],
]
`;

exports[`lifecycle event handling re-paints gremlins for already-processed file on window.onDidChangeActiveTextEditor 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 zero width space (unicode U+200b) here",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`lifecycle registration registers with window.onDidChangeActiveTextEditor 1`] = `
Array [
  Array [
    [Function],
    null,
    undefined,
  ],
]
`;

exports[`lifecycle registration registers with workspace.onDidChangeConfiguration 1`] = `
Array [
  Array [
    [Function],
    null,
    undefined,
  ],
]
`;

exports[`lifecycle registration registers with workspace.onDidChangeTextDocument 1`] = `
Array [
  Array [
    [Function],
    null,
    undefined,
  ],
]
`;

exports[`lifecycle registration registers with workspace.onDidCloseTextDocument 1`] = `
Array [
  Array [
    [Function],
    null,
    undefined,
  ],
]
`;

exports[`updateDecorations clears decorations with a clean document 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [],
  ],
]
`;

exports[`updateDecorations clears problems with a clean document 1`] = `
Array [
  Array [
    "document1",
    Array [],
  ],
]
`;

exports[`updateDecorations shows left double quotation mark 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 left double quotation mark (unicode U+201c) here",
        "range": Object {
          "left": Object {
            "char": 27,
            "line": 0,
          },
          "right": Object {
            "char": 28,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows left double quotation mark in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "1 left double quotation mark (unicode U+201c) here",
        "range": Object {
          "left": Object {
            "char": 27,
            "line": 0,
          },
          "right": Object {
            "char": 28,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows multiple characters on multiple lines 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "3 paragraph separators (unicode U+2029) here",
        "range": Object {
          "left": Object {
            "char": 20,
            "line": 3,
          },
          "right": Object {
            "char": 23,
            "line": 3,
          },
        },
      },
      Object {
        "hoverMessage": "3 non breaking spaces (unicode U+00a0) here",
        "range": Object {
          "left": Object {
            "char": 19,
            "line": 4,
          },
          "right": Object {
            "char": 22,
            "line": 4,
          },
        },
      },
      Object {
        "hoverMessage": "3 zero width spaces (unicode U+200b) here",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 1,
          },
          "right": Object {
            "char": 20,
            "line": 1,
          },
        },
      },
      Object {
        "hoverMessage": "3 zero width non-joiners (unicode U+200c) here",
        "range": Object {
          "left": Object {
            "char": 22,
            "line": 2,
          },
          "right": Object {
            "char": 25,
            "line": 2,
          },
        },
      },
      Object {
        "hoverMessage": "3 left double quotation marks (unicode U+201c) here",
        "range": Object {
          "left": Object {
            "char": 27,
            "line": 5,
          },
          "right": Object {
            "char": 30,
            "line": 5,
          },
        },
      },
      Object {
        "hoverMessage": "3 right double quotation marks (unicode U+201d) here",
        "range": Object {
          "left": Object {
            "char": 28,
            "line": 6,
          },
          "right": Object {
            "char": 31,
            "line": 6,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows multiple characters on multiple lines in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "3 zero width spaces (unicode U+200b) here",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 1,
          },
          "right": Object {
            "char": 20,
            "line": 1,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "Gremlins tracker",
      },
      Object {
        "message": "3 zero width non-joiners (unicode U+200c) here",
        "range": Object {
          "left": Object {
            "char": 22,
            "line": 2,
          },
          "right": Object {
            "char": 25,
            "line": 2,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "Gremlins tracker",
      },
      Object {
        "message": "3 paragraph separators (unicode U+2029) here",
        "range": Object {
          "left": Object {
            "char": 20,
            "line": 3,
          },
          "right": Object {
            "char": 23,
            "line": 3,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "Gremlins tracker",
      },
      Object {
        "message": "3 non breaking spaces (unicode U+00a0) here",
        "range": Object {
          "left": Object {
            "char": 19,
            "line": 4,
          },
          "right": Object {
            "char": 22,
            "line": 4,
          },
        },
        "severity": "DiagnosticSeverity.Information",
        "source": "Gremlins tracker",
      },
      Object {
        "message": "3 left double quotation marks (unicode U+201c) here",
        "range": Object {
          "left": Object {
            "char": 27,
            "line": 5,
          },
          "right": Object {
            "char": 30,
            "line": 5,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "Gremlins tracker",
      },
      Object {
        "message": "3 right double quotation marks (unicode U+201d) here",
        "range": Object {
          "left": Object {
            "char": 28,
            "line": 6,
          },
          "right": Object {
            "char": 31,
            "line": 6,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows non breaking space 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 non breaking space (unicode U+00a0) here",
        "range": Object {
          "left": Object {
            "char": 19,
            "line": 0,
          },
          "right": Object {
            "char": 20,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows non breaking space in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "1 non breaking space (unicode U+00a0) here",
        "range": Object {
          "left": Object {
            "char": 19,
            "line": 0,
          },
          "right": Object {
            "char": 20,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Information",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows object replacement character 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 object replacement character (unicode U+fffc) here",
        "range": Object {
          "left": Object {
            "char": 29,
            "line": 0,
          },
          "right": Object {
            "char": 30,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows object replacement character in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "1 object replacement character (unicode U+fffc) here",
        "range": Object {
          "left": Object {
            "char": 29,
            "line": 0,
          },
          "right": Object {
            "char": 30,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows paragraph separator 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 paragraph separator (unicode U+2029) here",
        "range": Object {
          "left": Object {
            "char": 20,
            "line": 0,
          },
          "right": Object {
            "char": 21,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows paragraph separator in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "1 paragraph separator (unicode U+2029) here",
        "range": Object {
          "left": Object {
            "char": 20,
            "line": 0,
          },
          "right": Object {
            "char": 21,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows right double quotation mark 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 right double quotation mark (unicode U+201d) here",
        "range": Object {
          "left": Object {
            "char": 28,
            "line": 0,
          },
          "right": Object {
            "char": 29,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows right double quotation mark in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "1 right double quotation mark (unicode U+201d) here",
        "range": Object {
          "left": Object {
            "char": 28,
            "line": 0,
          },
          "right": Object {
            "char": 29,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows soft hyphen 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 soft hyphen (unicode U+00ad) here",
        "range": Object {
          "left": Object {
            "char": 12,
            "line": 0,
          },
          "right": Object {
            "char": 13,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows soft hyphen in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "1 soft hyphen (unicode U+00ad) here",
        "range": Object {
          "left": Object {
            "char": 12,
            "line": 0,
          },
          "right": Object {
            "char": 13,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Information",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows zero width non-joiner 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 zero width non-joiner (unicode U+200c) here",
        "range": Object {
          "left": Object {
            "char": 22,
            "line": 0,
          },
          "right": Object {
            "char": 23,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows zero width non-joiner in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "1 zero width non-joiner (unicode U+200c) here",
        "range": Object {
          "left": Object {
            "char": 22,
            "line": 0,
          },
          "right": Object {
            "char": 23,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Warning",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;

exports[`updateDecorations shows zero width space 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "1 zero width space (unicode U+200b) here",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows zero width space in problems 1`] = `
Array [
  Array [
    "document1",
    Array [
      Object {
        "message": "1 zero width space (unicode U+200b) here",
        "range": Object {
          "left": Object {
            "char": 17,
            "line": 0,
          },
          "right": Object {
            "char": 18,
            "line": 0,
          },
        },
        "severity": "DiagnosticSeverity.Error",
        "source": "Gremlins tracker",
      },
    ],
  ],
]
`;
